# ssh_helper

./: CMakeLists.txt  README.md  install-packages-ubuntu.sh
configfileparser/: CMakeLists.txt  configfileparser.cpp  configfileparser.h  debug.cpp  debug.h  simpleexception.cpp  simpleexception.h  string_utils.cpp  string_utils.h
ssh_helper_cli/: CMakeLists.txt  Makefile  clientthread.cpp  clientthread.h  main.cpp  manager.cpp  manager.h  p2pdata.cpp  p2pdata.h  sshptr.cpp  sshptr.h  threadshareddata.cpp  threadshareddata.h
ssh_helper_cli/scripts-example/: script-download.txt  script-monitor.txt  script-scp.txt  script.txt  test.sh
ssh_helper_gui/: CMakeLists.txt  config.in  copyfiletoclientdialog.cpp  copyfiletoclientdialog.h  copyfiletoclientdialog.ui  guiscriptdialog.cpp  guiscriptdialog.h  guiscriptdialog.ui  host.cpp  host.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitordialog.cpp  monitordialog.h  monitordialog.ui  newhost.cpp  newhost.h  newhost.ui  script.cpp  script.h  scriptdialog.cpp  scriptdialog.h  scriptdialog.ui  ssh.ui
ssh_helper_gui/desktop_files/: ssh_helper.desktop.in
ssh_helper_gui/share/: menu.txt
ssh_helper_show_log/: CMakeLists.txt  ssh_helper_show_log.sh
